# GrayScaleOpenCL

./: CMakeLists.txt  FindOpenCL.cmake  GrayScaleCpp.kdev4  kernel.cl  main.cpp  reference.cpp  reference.hpp
